[package]
name = "sched_test"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "^0.20"
diesel = { version = "1.4.3", features = ["sqlite", "chrono"] }
chrono = { version = "*", features = ["serde"] }
# clap = "*"
rlua = "^0.16"
rustyline = "5.0.6"
serde = "*"
serde_derive = "*"
serde_json = "*"
# rlua_serde = "*"
# Currently `rlua_serde` won't convert an empty table to an empty vec, so using
# this instead, until the pull request (#9) is merged (also see issue #8)
rlua_serde = { git = "https://github.com/clouds56/rlua_serde", branch = "patch-2" }
fragile = "*"
lazy_static = "*"
