[package]
name = "sched_test"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.13", features = ["serde"] }
# clap = "*"
redis = { version = "0.16.0", default-features = false, features = ["script"] }
rlua = "0.17.0"
rustyline = "6.2.0"
serde = "1.0.114"
serde_derive = "1.0.114"
rlua_serde = "0.4.0"
lazy_static = "1.4.0"
dirs = "3.0.1"
either = "1.5.3"
